# socks5mitm

./: .gitignore  LICENSE  README.md  pyproject.toml
.githooks/: pre-commit
examples/: README.md  http_spy.py  local_domain.py  multiple_accounts.py  simple.py  torify.py
src/socks5mitm/: __init__.py  address.py  handshake.py  protocol.py  proxy.py  server.py
tests/: test_address.py
